objects/Account.object
<CustomObject>
    <fields>
        <fullName>c2g__CODADaysOffset1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset2__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset3__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADefaultExpenseAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default GLA on expense lines.</description>
        <label>Default Expense Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Default Expense Account)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription1__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription2__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 2</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription3__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 3</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The amount of discount to be applied</description>
        <label>Discount 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount2__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount3__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAECCountryCode__c</fullName>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CY</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAEntityUseCode__c</fullName>
        <label>Entity / Use Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Federal government - United States</fullName>
                </value>
                <value>
                    <fullName>B - State government - United States</fullName>
                </value>
                <value>
                    <fullName>C - Tribe / Status Indian / Indian Band - both</fullName>
                </value>
                <value>
                    <fullName>D - Foreign diplomat - both</fullName>
                </value>
                <value>
                    <fullName>E - Charitable or benevolent org - both</fullName>
                </value>
                <value>
                    <fullName>F - Religious or educational org - both</fullName>
                </value>
                <value>
                    <fullName>G - Resale - both</fullName>
                </value>
                <value>
                    <fullName>H - Commercial agricultural production - both</fullName>
                </value>
                <value>
                    <fullName>I - Industrial production / manufacturer - both</fullName>
                </value>
                <value>
                    <fullName>J - Direct pay permit - United States</fullName>
                </value>
                <value>
                    <fullName>K - Direct mail - United States</fullName>
                </value>
                <value>
                    <fullName>L - Other - both</fullName>
                </value>
                <value>
                    <fullName>N - Local government - United States</fullName>
                </value>
                <value>
                    <fullName>P - Commercial aquaculture - Canada</fullName>
                </value>
                <value>
                    <fullName>Q - Commercial Fishery - Canada</fullName>
                </value>
                <value>
                    <fullName>R - Non-resident - Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAExemptionCertificate__c</fullName>
        <label>Exemption Certificate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAFederallyReportable1099__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Federally Reportable 1099</description>
        <label>Federally Reportable 1099</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAFinanceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rents</fullName>
                </value>
                <value>
                    <fullName>2 - Royalties</fullName>
                </value>
                <value>
                    <fullName>3 - Other Income</fullName>
                </value>
                <value>
                    <fullName>4 - Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 - Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 - Medical and Healthcare Payments</fullName>
                </value>
                <value>
                    <fullName>7 - Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
                </value>
                <value>
                    <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
                </value>
                <value>
                    <fullName>10 - Crop Insurance Proceeds</fullName>
                </value>
                <value>
                    <fullName>11 - Unused 11</fullName>
                </value>
                <value>
                    <fullName>12 - Unused 12</fullName>
                </value>
                <value>
                    <fullName>13 - Excess Golden Parachute Payments</fullName>
                </value>
                <value>
                    <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
                </value>
                <value>
                    <fullName>Not Reportable</fullName>
                    <default>true</default>
                    <label>Not Reportable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAInputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Input VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIntercompanyAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intercompany Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInvoiceEmail__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__CODAMergeId__c</fullName>
        <label>Merge Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAOutputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPaymentMethod__c</fullName>
        <description>The payment method</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAReportingCode__c</fullName>
        <description>A unique code used for reporting</description>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                    <label>Taxable</label>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAShippingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(ShippingStreet) &amp;&amp;
ISBLANK(ShippingCity) &amp;&amp;
ISBLANK(ShippingState) &amp;&amp;
ISBLANK(ShippingPostalCode) &amp;&amp;
ISBLANK(ShippingCountry)) &amp;&amp;
c2g__CODAValidatedShippingStreet__c == ShippingStreet &amp;&amp;
c2g__CODAValidatedShippingCity__c == ShippingCity &amp;&amp;
c2g__CODAValidatedShippingState__c == ShippingState &amp;&amp;
c2g__CODAValidatedShippingPostCode__c == ShippingPostalCode &amp;&amp;
c2g__CODAValidatedShippingCountry__c == ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCalculationMethod__c</fullName>
        <description>The method of calculating tax in the UK.</description>
        <label>Tax Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                    <default>true</default>
                    <label>Gross</label>
                </value>
                <value>
                    <fullName>Net of Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxpayerIdentificationNumber__c</fullName>
        <description>Taxpayer Identification Number</description>
        <label>Taxpayer Identification Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATRegistrationNumber__c</fullName>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>EC Registered</fullName>
                </value>
                <value>
                    <fullName>EC Non-registered</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCity__c</fullName>
        <label>ValidatedBillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCountry__c</fullName>
        <label>ValidatedBillingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingPostCode__c</fullName>
        <label>ValidatedBillingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingState__c</fullName>
        <label>ValidatedBillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingStreet__c</fullName>
        <label>ValidatedBillingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCity__c</fullName>
        <label>ValidatedShippingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCountry__c</fullName>
        <label>ValidatedShippingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingPostCode__c</fullName>
        <label>ValidatedShippingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingState__c</fullName>
        <label>ValidatedShippingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingStreet__c</fullName>
        <label>ValidatedShippingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CollectionsOnHoldReason__c</fullName>
        <label>Collections On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice in dispute</fullName>
                </value>
                <value>
                    <fullName>Account in dispute</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CollectionsOnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collections On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DaysSalesOutstanding__c</fullName>
        <description>Average number of days it takes to collect payment after a sale has been made, based on the sales and payments made in the last 365 days. The value in this field is automatically calculated.</description>
        <inlineHelpText>Average number of days it takes to collect payment after a sale has been made, based on the sales and payments made in the last 365 days. The value in this field is automatically calculated.</inlineHelpText>
        <label>Days Sales Outstanding (Annual)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffaci__CurrencyCulture__c</fullName>
        <label>Currency Culture</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Salesforce Account to use for the Billing Address.</description>
        <inlineHelpText>Lookup to the Salesforce Account to use for the Billing Address.</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Billing Accounts</relationshipLabel>
        <relationshipName>SubAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountParticulars__c</fullName>
        <label>Account Particulars</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankBIC__c</fullName>
        <label>Bank BIC</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCode__c</fullName>
        <label>Payment Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCountryISO__c</fullName>
        <label>Payment Country ISO</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentPriority__c</fullName>
        <label>Payment Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__PaymentRoutingMethod__c</fullName>
        <label>Payment Routing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ExemptionCertificate__c</fullName>
        <description>Tax exemption certificate for the account. We recommend that you use the tax exemption features of Avalara. Use this field only when you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</description>
        <inlineHelpText>Tax exemption certificate for the account. Enter a value if you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</inlineHelpText>
        <label>Exemption Certificate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsBillingAddressValidated__c</fullName>
        <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
        <formula>fferpcore__MaterializedBillingAddressValidated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsShippingAddressValidated__c</fullName>
        <description>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</description>
        <formula>fferpcore__MaterializedShippingAddressValidated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaterializedBillingAddressValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Foundations to indicate that an address has been validated when Update Address Validated Fields is selected in the FDN Common Object Settings custom setting.</description>
        <label>Billing Address Validated Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaterializedShippingAddressValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Foundations to indicate that an address has been validated when Update Address Validated Fields is selected in the FDN Common Object Settings custom setting.</description>
        <label>Shipping Address Validated Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__OutputVatCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tax code to be used when calculating tax in a VAT or GST company.</description>
        <inlineHelpText>The tax code to be used when calculating tax in a VAT or GST company.</inlineHelpText>
        <label>Output VAT/GST Code</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__SalesTaxStatus__c</fullName>
        <description>The tax status for this account for SUT companies.</description>
        <inlineHelpText>The tax status for this account for SUT companies.</inlineHelpText>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first SUT tax code for this account.</description>
        <inlineHelpText>The first SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 1</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The second SUT tax code for this account.</description>
        <inlineHelpText>The second SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 2</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The third SUT tax code for this account.</description>
        <inlineHelpText>The third SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 3</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCountryCode__c</fullName>
        <description>Code for the European Union country in which this account operates. You can update the entries in this custom picklist if required.
The country code is required for the correct reporting of VAT on cross-border trades within the European Union.</description>
        <inlineHelpText>The country code for this account. This is required for correct reporting of VAT on cross-border trades within the European Union.</inlineHelpText>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__TaxCountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCity__c</fullName>
        <description>Billing address city validated by the external tax calculation service.</description>
        <label>Validated Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCountry__c</fullName>
        <description>Billing address country validated by the external tax calculation service.</description>
        <label>Validated Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingPostalCode__c</fullName>
        <description>Billing address postal code validated by the external tax calculation service.</description>
        <label>Validated Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingState__c</fullName>
        <description>Billing address state or province validated by the external tax calculation service.</description>
        <label>Validated Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingStreet__c</fullName>
        <description>Billing address street validated by the external tax calculation service.</description>
        <label>Validated Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCity__c</fullName>
        <description>Shipping address city validated by the external tax calculation service.</description>
        <label>Validated Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCountry__c</fullName>
        <description>Shipping address country validated by the external tax calculation service.</description>
        <label>Validated Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingPostalCode__c</fullName>
        <description>Shipping address postal code validated by the external tax calculation service.</description>
        <label>Validated Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingState__c</fullName>
        <description>Shipping address state or province validated by the external tax calculation service.</description>
        <label>Validated Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingStreet__c</fullName>
        <description>Shipping address street validated by the external tax calculation service.</description>
        <label>Validated Shipping Street</label>
        <type>TextArea</type>
    </fields>
</CustomObject>